# Quidditch

./: .gitignore  .gitmodules  Blah.txt  TimeTravel.md  build-output.txt  fix-shark-turbine-error-requirements.txt  hacky-nsnet2-front-end-fix.md  howToRemoveSnitchTargetFromNsNet2.diff  inspect-linalg.md  requirements.txt
comparing-tile-sizes/: .gitignore  1x1200x400wm-n-k_case1_searchSpace.csv  1x1200x400wm-n-k_case1_searchSpace_REDO.csv  1x400x161wm-n-k_case1_searchSpace.csv  1x600x400wm-n-k_case1_searchSpace.csv  1x600x600wm-n-k_case1_searchSpace.csv  1x600x600wm-n-k_case1_searchSpace_REDO.csv  README.md  cmakelist-epilogue.txt  cmakelist-middle-original.txt  cmakelist-prologue.txt  compileGrapefruits.sh  ex_mini.csv  generateTileSizeJSONFiles.py  golden_output.txt  making-search-spaces-match.md  manyGrapefruits.sh  runGrapefruits.sh  run_experiment.sh  scrapeGrapefruits.sh  scrutinizeGrapefruits.sh  segfaults.txt
comparing-tile-sizes/0-40-100/: CMakeLists.txt  run_output.txt
comparing-tile-sizes/0-40-120/: CMakeLists.txt  run_output.txt  tilingCosts.json
comparing-tile-sizes/0-40-200/: CMakeLists.txt  run_output.txt
comparing-tile-sizes/0-48-100/: CMakeLists.txt  run_output.txt  tilingCosts.json
comparing-tile-sizes/0-80-100/: CMakeLists.txt  run_output.txt
comparing-tile-sizes/0-80-80/: CMakeLists.txt  run_output.txt  tilingCosts.json
comparing-tile-sizes/emily-tile-sizes/: CMakeLists.txt  run_output.txt  tilingCosts.json
comparing-tile-sizes/tile-sizes-to-test/: 0-40-100.json  0-40-120.json  0-40-200.json  0-48-100.json  0-80-100.json  0-80-80.json
debugging-emily/: README.md
debugging-emily/re-run-debug/: 1x600x400wm-n-k_case1_searchSpace-debug.csv  1x600x600wm-n-k_case1_searchSpace-debug.csv  grapefruit-markus-tiles.txt  grapefruit-supposedly-fastest-tiles.txt  nsnet2-markus-tiles.txt
fakeNN/: .gitignore  README.md  cmakelist-epilogue.txt  cmakelist-middle-original.txt  compile.sh  compileGrapefruits.sh  export.sh  fakeNN_util.c  fakeNN_util.h  generateTileSizeJSONFiles.py  matVecTtest.py  one-run-results.csv  one-run.csv  run.sh  runGrapefruits.sh  run_experiment.sh  run_linear_layer.sh
fakeNN/linear-layer-search-space/: matVecTtest.csv  one-run.csv
fakeNN/linear-layer-search-space/golden-tiling-schemes/: 2x120x20w0-0-0.json  2x120x40w0-0-0.json
fakeNN/linear-layer-search-space/templates/: CMakeLists-epilog.txt  CMakeLists.txt  fakeNN-tile-sizes-costs.txt  fakeNN-tile-sizes.json  fakeNN_util-prolog.h  fakeNN_util.h
fakeNN/linear-layer-search-space/tiling-schemes/: 2x120x20w0-0-20.json  2x120x20w0-0-60.json  2x120x40w0-0-100.json  2x120x40w0-0-30.json  2x120x40w0-0-60.json
fakeNN/retired-scripts/: compileGrapefruits.sh  merge.py  scrapeGrapefruits.sh  scrutinizeGrapefruits.sh
myrtle/: README.md  answer.json  fakeMyrtle.py  request.txt  utils.py
myrtle/myrtle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
runtime/cmake/: quidditch_module.cmake
runtime/samples/: .gitignore  CMakeLists.txt
runtime/samples/big_matvec/: CMakeLists.txt
runtime/samples/calabaza/: CMakeLists.txt  main.c  pumpkin.mlir
runtime/samples/caqui/: CMakeLists.txt  main.c  persimmon.mlir
runtime/samples/fakeNN/: CMakeLists.txt  emily-tile-sizes-costs.txt  fakeNN-tile-sizes.json  fakeNN.py  fakeNN_util.c  fakeNN_util.h  output-for-input-size-1x120x40 copy.txt  output-for-input-size-2x120x40.txt  output-for-input-size-50x120x40.txt  ts-answer.json  ts-request.txt
runtime/samples/grapeFruit/: CMakeLists-old.txt  CMakeLists.txt  disp-7-0-600-8.json  disp-9-bandaid.json  emily-tile-sizes-costs.txt  emily-tile-sizes.json  grapeFruit-output-emily-tile-sizes.txt  grapeFruit.py  grapeFruit_util.c  grapeFruit_util.h  grapefruit-output-emily-tiles-again.txt  grapefruit-output-grapefruit-mlirbc.txt  markus-tile-sizes.json  ts-answer.json
runtime/samples/nn_another/: NsNet2.py  README.md
runtime/samples/nsnet2/: CMakeLists.txt  NsNet2.py  bypass-iree-turbine.sh  disp-9-bandaid.json  manually-chosen-tiles.json  nsnet2-output-grapefruit-mlirbc.txt  nsnet2-output-markus-tiles.txt  nsnet2_util.c  ts-request.txt
runtime/samples/pomelo/: CMakeLists.txt  main-matvec.c  main.c  pamplemousse-matvec.mlir  pamplemousse.mlir
runtime/samples/tiny_matmul/: CMakeLists.txt  main.c  tiny_matmul.mlir
runtime/samples/vec_multiply/: CMakeLists.txt  main.c  record_cycles.mlir  simple_add.mlir
runtime/snitch_cluster/: CMakeLists.txt
runtime/tests/: CMakeLists.txt  compile-all-mlir-tests-for-riscv.sh  compile-for-riscv.sh  zigzag-verilator-build-and-run.sh
runtime/tests/holaWorld/: README.md  main.c
without-iree/: README.md  setup.sh
zigzag_tiling/: README.md  boo.sh  fedora.md  markus-tile-sizes.json  run.sh
zigzag_tiling/grapeFruit/: after.mlir  before.mlir  dynamic-sizes-error.mlir  error-after-modifying-config-for-snitch.mlir  grapefruit-notes.md  triple-checking-tile-sizes.md
zigzag_tiling/myrtle/: README.md  SensitivityAnalysis.md  all_passes_run_during_compilation.txt  understanding-dingle-buffer-no-adding.mlir  understanding-single-buffering.mlir
(+49 files in other folders)
